<resources>
    <string name="app_name">Poker App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preference_file_key">POKER_CHECK_HISTORY</string>
    <string name="add_poker">項目を追加</string>
    <string name="input_title">値を入力してください</string>
    <string name="poker_value_1">値1</string>
    <string name="poker_value_2">値2</string>
    <string name="poker_value_3">値3</string>
    <string name="poker_value_4">値4</string>
    <string name="poker_value_5">値5</string>
    <string name="poker_hint">値を入力</string>
    <string name="result">結果を収得</string>
    <string name="poker_title">Poker</string>
    <string name="result_title">結果</string>
    <string name="history_title">履歴</string>
    <string name="wating_response">早々お待ちください...</string>
    <string name="get_img_url">https://source.unsplash.com/random/80x80</string>
    <string name="check_poker_url">http://p0kerhands.herokuapp.com/api/v1/cards/check</string>
    <string name="no_internet_title">インターネットがない</string>
    <string name="no_internet_content">インターネットに接続して、再実行お願いいたします！</string>
    <string name="close">閉じる</string>
    <string name="added_notice">追加した</string>

</resources>
